--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     //     },
     //   });
   </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- <script src="http://code.jquery.com/jquery-latest.min.js"></script> -->
 </head>
 
 <body>
